--- a/pages/product.html
+++ b/pages/product.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <base href="C:/Users/andre/Documents/GitHub/Dynamic-Website/">
+</head>
 <body>
   <div class = 'containter'>
     <nav>
-      <img id = 'picture'>
+      <img id = 'picture' width = 200 height = 200>
     </nav>
     <article>
       <h1 id = name></h1>
@@ -16,7 +19,7 @@
 <script>
 var productName = 'Ray Bans';
 var productPrice = '12.00';
-var productPicture = 'C:\\Users\\andre\\Documents\\GitHub\\Dynamic-Website\\resource\\ray-ban.jpg';
+var productPicture = 'resource/Glass 1.jpeg';
 
 document.getElementById('name').innerHTML = productName;
 document.getElementById('price').innerHTML = productPrice;
