--- a/pages/index.html
+++ b/pages/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html>
+<header>
+  <h1>Glasses World Wide Inc</h1>
+</header>
+
 <body>
-  <h1> Glasses World Wide </h1>
+  <a href="catalogue.html">Click here to go to our store</a>
   <h2> Our Business </h2>
   <p> Our corporation is awesome.</p>
   <h2>Our Merchandise</h2>
   <p>We sell premium glasses</p>
-
-
 </body>
+
+<footer>
+  <p> Footer stuff? </p>
+</footer>
 </html>
 
 <script>
-  var availableGlassesForSale = [],
-  var pairOfGlasses = {
-    name:
-    price:
-    picture:
-    tags: [
-    ]
-  }
+
 </script>
