Re did project in HTML DOM
Much better improvement. Connected majority of the pages

--- a/pages/index.html
+++ b/pages/index.html
@@ -3,7 +3,6 @@
 <header>
   <h1>Glasses World Wide Inc</h1>
 </header>
-
 <body>
   <a href="catalogue.html">Click here to go to our store</a>
   <h2> Our Business </h2>
@@ -20,3 +19,7 @@
 <script>
 
 </script>
+
+<style>
+background: linear-gradient(45deg Blue, Black)
+</style>
