--- a/pages/test2.html
+++ b/pages/test2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <base href="C:/Users/andrew/Documents/GitHub/Dynamic-Website/">
+  <base href="C:/Users/andre/Documents/GitHub/Dynamic-Website/">
   <h1>hello</h1>
 </head>
 <body>
@@ -37,8 +37,10 @@ var products = [
 //   document.getElementById('purchaseInfo').innerHTML = 'lol';
 // };
 function insertProductInfo(){
-  document.getElementById('name').innerHTML = 'lol';
+  document.getElementById('name').innerHTML = 'Sunrise Shades';
   document.getElementById('price').innerHTML = 12.99;
   document.getElementById('pic').src = 'resource/Glass 1.jpeg';
+  document.getElementById('pic').width = 150;
+  document.getElementById('pic').height = 150;
 }
 </script>
