Corrected Standard Document Procedures
Edward helped me put some reuqired stuff and changed folder layouts

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
-<header>
-  <h1>Glasses World Wide Inc</h1>
-</header>
+<head>
+  <meta charset ="utf-8">
+  <title>Glasses World Wide Inc </title>
+</head>
 <body>
   <a href="catalogue.html">Click here to go to our store</a>
   <h2> Our Business </h2>
@@ -10,16 +11,4 @@
   <h2>Our Merchandise</h2>
   <p>We sell premium glasses</p>
 </body>
-
-<footer>
-  <p> Footer stuff? </p>
-</footer>
 </html>
-
-<script>
-
-</script>
-
-<style>
-background: linear-gradient(45deg Blue, Black)
-</style>
