--- a/catalogue.html
+++ b/catalogue.html
@@ -3,16 +3,18 @@
 <head>
   <meta charset ="utf-8">
   <title>Glasses For Sale </title>
+  <link rel="stylesheet" href="/assets/css/main.css">
 </head>
 <body>
   <h1> Glasses World Wide </h1>
   <h2> Displaying all merchandise goes here </h2>
   <div id = 'items'></div>
-  <script src = "/data.js"></script>
+  <script src = "/assets/js/data.js"></script>
   <script>
   var i = 0;
   var parent = document.getElementById('items');
   for (i = 0; i < products.length; i++){
+    var item = document.createElement('div');
     var space = document.createElement('br');
     var product = document.createElement('img');
     var productLink = document.createElement('a');
@@ -31,15 +33,16 @@
     });
     productLink.href = "/product.html?" + i;
     productLink.appendChild(product);
-    parent.appendChild(productLink);
+    item.appendChild(productLink);
 
     var nameText = document.createElement('h1');
     nameText.textContent = products[i].productName;
-    parent.appendChild(nameText);
+    item.appendChild(nameText);
 
     var priceText = document.createElement('p');
     priceText.textContent = products[i].productPrice;
-    parent.appendChild(priceText);
+    item.appendChild(priceText);
+    parent.appendChild(item);
   };
   </script>
 </body>
