--- a/product.html
+++ b/product.html
@@ -11,9 +11,10 @@
     <p id = price></p>
   </div>
   <h2> Order Form </h2>
-    <p id =
     <form name="myForm">
-      First Name: <input type="text" name="firstName" placeholder="ex. Bob" pattern = "^[a-zA-Z]+$" required >
+      Quanity: <input type="text" name="quantity" pattern= "[1-9]\d*" required>
+      </br>
+      First Name: <input type="text" name="firstName" placeholder="ex. Bob" pattern = "^[a-zA-Z]+$" required>
       </br>
       Last Name: <input type="text" name="lastName" placeholder="ex. Smith" pattern = "^[a-zA-Z]+$" required>
       </br>
