--- a/index.html
+++ b/index.html
@@ -2,13 +2,63 @@
 <html>
 <head>
   <meta charset ="utf-8">
+  <link rel="stylesheet" type="text/css" href="assets/css/index.css">
   <title>Glasses World Wide Inc </title>
 </head>
 <body>
-  <a href="catalogue.html">Click here to go to our store</a>
-  <h2> Our Business </h2>
-  <p> Our corporation is awesome.</p>
-  <h2>Our Merchandise</h2>
-  <p>We sell premium glasses</p>
+
+  <header>
+    <div class = "header">
+      <h1> Glasses World Wide </h1>
+
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="catalogue.html">Merchandise</a></li>
+      </ul>
+    </div>
+  </header>
+
+  <div class="content">
+    <h2> Overview </h2>
+    <p> Here at Glasses World Wide, we specialize in the finest glasses around
+      world. We select only the <strong> finest </strong> glasses from
+      your favorite designers as well as many designers that are upcoming.
+      Please take a look at our wide selection and be amazed on how fashionable,
+      hip, and cool you will feel when you buy our glasses.
+    </p>
+
+    <h2> The Team </h2>
+    <p> You may be wondering how we keep our costs so low! It is because
+      only two people here are employed at Glasses World Wide. We source the
+      glasses ourselves and take out the middle man in order to get the absolute
+      best prices for you! Savings all around. We really care about you.
+    </p>
+
+    <h4> Andrew Le - Worker #1 </h4>
+    <h4> Ki Chan Min - Worker #2 </h4>
+
+    <h2> Contact us </h2>
+    <p> Call us at: 123-456-7890 </br>
+      Visit us at: UC Irvine, Irvine
+    </p>
+
+    <div class="click-me">
+      <a class href="catalogue.html">Click here to view our merchandise!</a>
+    </div>
+
+  </div>
+
+
+  <footer>
+    <h1 class="copyright">
+      INF 124 - leaa1 & kcmin
+    </h1>
+
+    <p class = "names">
+      Andrew Le & Ki Chan Min
+    </p>
+
+  </footer>
+
 </body>
 </html>
