--- a/product.html
+++ b/product.html
@@ -24,7 +24,7 @@
     <p id = "details"></p>
   </div>
   <h2> Order Form </h2>
-  <form name="myForm">
+  <form name="myForm" action="mailto:GlassesWorldWide@gww.com" method = "GET">
     Quanity: <input type="text" name="quantity" pattern= "[1-9]\d*" required>
   </br>
   First Name: <input type="text" name="firstName" placeholder="ex. Bob" pattern = "^[a-zA-Z]+$" required>
@@ -54,7 +54,7 @@ Credit Card Number : <input type="text" name="creditCardNumber" placeholder="ex.
 <input type="radio" name="shippingMethod" id="6-days ground" value="6-days ground" required>
 <label for="6-days ground">6-days ground</label>
 <br/>
-<button type="submit">Submit </button>
+<button type="submit" value ="Send">Submit </button>
 </form>
 
 <script src = "/assets/js/data.js"></script>
