Updated Email Function

--- a/product.html
+++ b/product.html
@@ -24,7 +24,7 @@
     <p id = "details"></p>
   </div>
   <h2> Order Form </h2>
-  <form name="myForm" action="mailto:GlassesWorldWide@gww.com" method = "GET">
+  <form name="myForm" action="mailto:GlassesWorldWide@gww.com" method = "POST">
     Quanity: <input type="text" name="quantity" pattern= "[1-9]\d*" required>
   </br>
   First Name: <input type="text" name="firstName" placeholder="ex. Bob" pattern = "^[a-zA-Z]+$" required>
